Документация Swagger Обновил документацию для того чтобы в дальнейшем легче тестировать Прописал схему для возвращаемого ресурса
